# FireNET

./: .gitignore  CMakeLists.txt  CryEngine-Module.sln  FireNET.pro  FireNET.sln  FireNET.vcxproj  FireNET.vcxproj.filters  GenerateSolution_Win64_VS2015.bat  GenerateSolution_Win64_VS2015_NO_UI.bat  LICENSE  README.md  RemoteAdmin.pro  RemoteAdminPanel.pro  SimpleClient.pro
3rd/includes/hiredis/: .travis.yml  COPYING  Makefile  README.md  async.c  hiredis.c  hiredis.h  net.c  test.c
3rd/includes/qredisclient/: connection.cpp  connection.h  connectionconfig.cpp  connectionconfig.h  scancommand.cpp  scancommand.h  scanresponse.cpp  scanresponse.h
3rd/includes/qsshclient/: qxtnetwork.h  qxtsshchannel.cpp  qxtsshchannel.h  qxtsshchannel_p.h  qxtsshclient.cpp  qxtsshclient.h  qxtsshclient_p.h  qxtsshprocess.cpp  qxtsshprocess.h  qxtsshtcpsocket.cpp  qxtsshtcpsocket.h
3rd/qt/lib/: Qt5Cored.lib  Qt5Network.lib  Qt5Sql.lib
examples/cryengine_gamesdk/: client.cfg  server.cfg
examples/cryengine_gamesdk/Assets/: News.xml
includes/FireNet/: FireNet  FireNet.inl  IFireNetEnv.h  SSL_CERTIFICATE.h
includes/FireNet/FireNetClient/: IFireNetClientBase.h  IFireNetClientCore.h
includes/FireNet/FireNetCore/: IFireNetBase.h  IFireNetCore.h  IFireNetCorePlugin.h  IFireNetEntities.h  IFireNetListener.h  IFireNetTcpPacket.h  IFireNetUdpPacket.h
includes/FireNet/FireNetServer/: IFireNetServerBase.h  IFireNetServerCore.h
includes/FireNetCommon/: FireNet-Client  FireNet-Core  SSL_CERTIFICATE.h
includes/FireNetCommon/FireNetClient/: IFireNetClientBase.h  IFireNetClientCore.h
includes/FireNetCommon/FireNetCore/: IFireNetCore.h  IFireNetListener.h  IFireNetTcpPacket.h  IFireNetUdpPacket.h
plugins/Common/Actors/: FireNetPlayer.cpp  FireNetPlayer.h
plugins/Common/Entities/: IFireNetActor.h  ISimpleWeapon.h
plugins/Common/Network/: SyncGameState.cpp  SyncGameState.h  UdpPacket.cpp  UdpPacket.h
plugins/FireNetClient/: FireNetClient.cryproject
plugins/FireNetClient/Code/: CMakeLists.txt
plugins/FireNetClient/Code/Main/: Plugin.cpp  Plugin.h  PluginEnv.h
plugins/FireNetClient/Code/NetActor/: ISimpleActor.h  NetPlayer.cpp  NetPlayer.h
plugins/FireNetClient/Code/NetActor/Animations/: NetPlayerAnimations.cpp
plugins/FireNetClient/Code/NetActor/Input/: NetPlayerInput.cpp  NetPlayerInput.h
plugins/FireNetClient/Code/NetActor/Movement/: NetPlayerMovement.cpp
plugins/FireNetClient/Code/Network/: NetworkThread.cpp  NetworkThread.h  ReadQueue.cpp  ReadQueue.h  SyncGameState.cpp  SyncGameState.h  UdpClient.cpp  UdpClient.h  UdpPacket.cpp  UdpPacket.h
plugins/FireNetCore/: CryFireNetCore.cryproject  FireNetCore.cryproject  firenet.cfg
plugins/FireNetCore 5.3 (Deprecated)/: CryFireNetCore.cryproject
plugins/FireNetCore 5.3 (Deprecated)/Code/: CMakeLists.txt  StdAfx.cpp  StdAfx.h
plugins/FireNetCore/Code/: CMakeLists.txt  StdAfx.cpp  StdAfx.h
plugins/FireNetCore/Code/Entities/: FireNetSpawnPoint.cpp  FireNetSpawnPoint.h
plugins/FireNetCore/Code/FlowNodes/: FlowNodeFireNET.cpp
plugins/FireNetCore/Code/GameRules/: FireNetEditorGameRules.cpp  FireNetGameRules.cpp  FireNetGameRules.h
plugins/FireNetCore/Code/Main/: Plugin.cpp  Plugin.h  PluginEnv.h
plugins/FireNetCore/Code/Network/: NetworkThread.cpp  ReadQueue.cpp  ReadQueue.h  TcpClient.cpp  TcpClient.h  TcpPacket.cpp  TcpPacket.h
plugins/FireNetServer/: FireNetServer.cryproject
plugins/FireNetServer/Code/: CMakeLists.txt  StdAfx.cpp  StdAfx.h
plugins/FireNetServer/Code/DummyPlayer/: DummyPlayer.cpp
plugins/FireNetServer/Code/DummyPlayer/Animations/: DummyPlayerAnimations.cpp  DummyPlayerAnimations.h
plugins/FireNetServer/Code/DummyPlayer/Input/: DummyPlayerInput.cpp  DummyPlayerInput.h
plugins/FireNetServer/Code/DummyPlayer/Movement/: DummyPlayerMovement.cpp  DummyPlayerMovement.h
plugins/FireNetServer/Code/Main/: Plugin.cpp  Plugin.h  PluginEnv.h
plugins/FireNetServer/Code/Network/: NetworkThread.cpp  NetworkThread.h  ReadQueue.cpp  ReadQueue.h  SyncGameState.cpp  SyncGameState.h  UdpServer.cpp  UdpServer.h
plugins/FireNetUI/: FireNetUI.cryproject
plugins/FireNetUI/Code/: CMakeLists.txt  StdAfx.cpp  StdAfx.h
plugins/FireNetUI/Code/Main/: Plugin.cpp  Plugin.h  PluginEnv.h
plugins/FireNetUI/Code/UI/: IUIPage.h  UIManager.cpp  UIManager.h
plugins/FireNetUI/Code/UI/Pages/: UI_Pages_HUD.cpp  UI_Pages_Menu.cpp  UI_Pages_Online.cpp
src/CryEngineModule/: Online.sln  Online.vcxproj  Online.vcxproj.filters
src/CryEngineModule/src/: CVars.cpp  CVars.h  CryModule.cpp  CryModule.h  FlowNodes.cpp  Global.cpp  Global.h  Network.cpp  Network.h  StdAdx.cpp  UIEvents.cpp  UIEvents.h  XmlWorker.cpp  XmlWorker.h  moc_network.cpp
src/client/: mainwindow.cpp  mainwindow.h  mainwindow.ui  netpacket.cpp
src/modules/cryengine/: FireNET_DLL.vcxproj  FireNET_DLL.vcxproj.filters  Online.sln  (+2 more)
src/remote_admin_panel/: client.cpp  client.h  global.cpp  global.h  inputlistener.cpp  inputlistener.h  netpacket.cpp
src/remote_aministration/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/server/: FireNET.vcxproj  FireNET.vcxproj.filters  clientquerys.cpp  clientquerys.h  dbworker.cpp  dbworker.h  global.cpp  global.h  helper.cpp  httpconnector.cpp  httpconnector.h  httpworker.cpp  httpworker.h  main.cpp  mysqlconnector.cpp  mysqlconnector.h  netpacket.cpp  netpacket.h  redisconnector.cpp  redisconnector.h  remoteclientquerys.cpp  remoteclientquerys.h  remoteconnection.cpp  remoteconnection.h  remoteserver.cpp  remoteserver.h  scripts.cpp  scripts.h  serverThread.cpp  serverThread.h  serverqueue.cpp  serverqueue.h  settings.cpp  settings.h  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  tcpserver.h  tcpthread.cpp  tcpthread.h
src/tools/auto_test/: AutoTest.pro  CMakeLists.txt  global.h  main.cpp  netpacket.cpp  tcpclient.cpp  tcpclient.h
src/tools/build_deployer/: BuildDeployer.pro  CMakeLists.txt  main.cpp
tools/auto_patcher/: HOW_TO_USE.txt  IntegrateToCryEngine.xml
tools/openssl/: c_rehash.pl
tools/server_files/: key.key  key.pem
tools/work_graph/: FireNET.graphml  MessageWorkLogic.graphml
(+265 files in other folders)
